// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextLink Primary link 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Primary link
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Link is used usually in the paragraph text to show that something navigates you to another location.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <a
            className="jsx-952623663"
            href="https://kiwi.com"
            onClick={[Function]}
            target={undefined}
          >
            Primary link
          </a>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        TextLink
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            onClick
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            url
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                https://kiwi.com
                                "
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Primary link
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        TextLink
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextLink Secondary link 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Secondary link
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Link is used usually in the paragraph text to show that something navigates you to another location.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <a
            className="jsx-2409894130"
            href="https://kiwi.com"
            onClick={[Function]}
            target="_blank"
          >
            Secondary link which opens in new tab
          </a>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        TextLink
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            newTab
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onClick
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            url
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                https://kiwi.com
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                secondary
                                "
                              </span>
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        Secondary link which opens in new tab
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        TextLink
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
